fix: :lipstick: Dispo-create: remove extra space between bullets

--- a/client/src/scss/pages/dispositif.scss
+++ b/client/src/scss/pages/dispositif.scss
@@ -275,6 +275,7 @@ $imgHeight: 350px;
       margin-bottom: 27px;
       line-height: 27px;
       font-size: $text-large;
+      padding-bottom: 0;
     }
 
     .relative-position {
